<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tag_list_menu_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/tag_list_menu_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tag_list_menu_sort"
        android:title="@string/sort_menu_title">
        <menu>
            <item
                android:id="@+id/tag_list_menu_sort_by_name"
                android:title="@string/sort_menu_by_name" />
            <item
                android:id="@+id/tag_list_menu_sort_by_custom"
                android:title="@string/sort_menu_sort_by_custom" />
        </menu>
    </item>
</menu>