<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.showdetails.ShowDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/sd_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/sd_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:expandedTitleGravity="top"
            app:expandedTitleMargin="0dp"
            app:expandedTitleMarginStart="72dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sd_collapsing_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:focusableInTouchMode="true"
                android:padding="8dp"
                app:layout_collapseMode="pin">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sd_title_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sd_title_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sd_title_hint"
                        android:maxLines="1"
                        android:singleLine="true"
                        tools:text="Awesome Show" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/sd_status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:labelFor="@id/sd_status_spinner"
                    android:text="@string/sd_status_label"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/sd_status_spinner"
                    app:layout_constraintStart_toStartOf="@+id/sd_status_spinner"
                    app:layout_constraintTop_toBottomOf="@+id/sd_title_input_layout" />

                <Spinner
                    android:id="@+id/sd_status_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:entries="@array/status_options"
                    android:prompt="@string/sd_status_prompt"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sd_status_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_show_detail" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>